# pwx-elogind-migration-tools

./: .aiignore  .clang-format  .gitignore  .perlcriticrc  .perltidyrc  .project  AGENTS.md  Makefile  README.md  check_tree.pl  cleanup_headers.sh  find_orphans.pl  last_mutual_commits.csv  migrate_tree.pl  rebuild_all.sh  update_po_files.pl
.opencode/: opencode.json  tui.json
src/: CMakeLists.txt  elomig.cpp
src/checktree/: CheckTree.cpp  CheckTree.h  FileProcessor.cpp  FileProcessor.h  PatchBuilder.cpp  PatchBuilder.h
src/data/: CommitInfo.cpp  CommitInfo.h  FileDiff.cpp  FileDiff.h  Hunk.cpp  Hunk.h  Patch.cpp  Patch.h
src/diff/: DiffGenerator.cpp  DiffGenerator.h  DiffParser.cpp  DiffParser.h
src/include/: IncludeAnalyzer.cpp  IncludeAnalyzer.h  IncludeReconciler.cpp  IncludeReconciler.h
src/mask/: MaskDetector.cpp  MaskDetector.h  MaskHandler.cpp  MaskHandler.h  ShellProcessor.cpp  ShellProcessor.h  XMLProcessor.cpp  XMLProcessor.h
src/migrate/: CommitDiscovery.cpp  CommitDiscovery.h  CommitFile.cpp  CommitFile.h  MigrateTree.cpp  MigrateTree.h  PatchApplier.cpp  PatchApplier.h  PatchGenerator.cpp  PatchGenerator.h
src/refactor/: CommentChecker.cpp  CommentChecker.h  DebugChecker.cpp  DebugChecker.h  EmptyMaskChecker.cpp  EmptyMaskChecker.h  FunctionProtector.cpp  FunctionProtector.h  HunkRefactorer.cpp  HunkRefactorer.h  IncludeHandler.cpp  IncludeHandler.h  MaskChecker.cpp  MaskChecker.h  MuslChecker.cpp  MuslChecker.h  UselessChecker.cpp  UselessChecker.h
src/reversion/: KindDetector.cpp  KindDetector.h  NameReverter.cpp  NameReverter.h
src/utils/: FileUtil.cpp  FileUtil.h  GitWrapper.cpp  GitWrapper.h  Logger.cpp  Logger.h  StringUtils.cpp  StringUtils.h  ThreadPool.cpp  ThreadPool.h  ThreadPool.tcc
